--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,10 +2,10 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>가지가지한다</title>
 
     <link th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css" rel="stylesheet">
-    <link th:href="@{/js/bootstrap.bundle.min.js}" href="../static/js/bootstrap.bundle.min.js">
+    <script type="text/javascript" th:src="@{/js/bootstrap.bundle.js}" src="../static/js/bootstrap.bundle.js"></script>
     <script src="https://kit.fontawesome.com/c2e67fd6d1.js" crossorigin="anonymous"></script>
 
     <style>
@@ -13,38 +13,38 @@
             max-width: 470px;
         }
         .navbar .container{
-            max-width: 580px;
+            max-width: 600px;
+        }
+        .confirmBtn{
+            background-color:  #7952b3;
+            color: white;
         }
     </style>
+
+
+
+
 </head>
 <body>
-<div th:replace="~{fragment/header :: header}"></div>
+
+<div th:replace ="~{fragment/header :: header}"></div>
+<div th:replace ="~{fragment/writingModal :: modal}"></div>
+
     <div class="container">
-        <div class="card" style="width: 30rem;">
-            <div class="card-header">
-                Featured
-            </div>
-            <img src="..." class="card-img-top" style="width: 100%; height: 470px; border: solid black 1px;" alt="...">
-            <div class="card-body">
-                <span><i class="far fa-heart"></i> <i class="far fa-thumbs-down"></i></span>
-                <h5 class="card-title">좋아요</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <form action="#">
-                    <input type="text"/>
-                    <button>댓글</button>
-                </form>
-            </div>
+        <!-- 본문 카드 -->
+        <div th:if="${posts.size()==0}">
+            텅...
         </div>
 
-        <div class="card" style="width: 30rem;">
-            <div class="card-header">
+        <div class="card" th:unless ="${posts.size()==0}" th:each="post : ${posts}" style="width: 30rem;">
+            <div class="card-header" th:text="${post.member.nickName}">
                 Featured
             </div>
             <img src="..." class="card-img-top" style="width: 100%; height: 470px; border: solid black 1px;" alt="...">
             <div class="card-body">
                 <span><i class="far fa-heart"></i> <i class="far fa-thumbs-down"></i></span>
                 <h5 class="card-title">좋아요</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <p class="card-text" th:text="${post.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <form action="#">
                     <input type="text"/>
                     <button>댓글</button>
@@ -54,3 +54,32 @@
     </div>
 </body>
 </html>
+
+
+<script >
+
+    var myModal = new bootstrap.Modal(document.getElementById('exampleModal'))
+    var postSubmitBtn = document.getElementById('postSubmitBtn');
+
+    postSubmitBtn.addEventListener('click', function (event) {
+        var contentArea = document.getElementById('message-text');
+        var content = contentArea.value;
+        console.log("클릭됐습니다.");
+
+        if (content.length === 0) {
+            alert("내용을 입력해 주세요.");
+        } else {
+            const request = new XMLHttpRequest();
+            request.open('post', '/post/new', true);
+            request.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
+            request.send(`description=` + content);
+
+            if (request.readyState == XMLHttpRequest.DONE && request.status == 200 ) {
+                console.log("")
+                myModal.hide();
+            }
+        }
+
+    });
+</script>
+
