--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -36,8 +36,9 @@
             텅...
         </div>
 
-        <div class="card" th:unless ="${posts.size()==0}" th:each="post : ${posts}" style="width: 30rem;">
-            <div class="card-header" th:text="${post.member.nickName}">
+        <div class="card mt-2" th:unless ="${posts.size()==0}" th:each="post : ${posts}" style="width: 30rem;">
+            <input type="hidden" id="postId" name="postId" th:value="${post.id}">
+            <div class="card-header " th:text="${post.member.nickName}">
                 Featured
             </div>
             <img src="..." class="card-img-top" style="width: 100%; height: 470px; border: solid black 1px;" alt="...">
@@ -58,28 +59,40 @@
 
 <script >
 
-    var myModal = new bootstrap.Modal(document.getElementById('exampleModal'))
+    var myModal = new bootstrap.Modal(document.getElementById('exampleModal'));
     var postSubmitBtn = document.getElementById('postSubmitBtn');
-
     postSubmitBtn.addEventListener('click', function (event) {
+        sendRequest();
+    });
+
+    function sendRequest() {
         var contentArea = document.getElementById('message-text');
         var content = contentArea.value;
-        console.log("클릭됐습니다.");
 
         if (content.length === 0) {
             alert("내용을 입력해 주세요.");
         } else {
-            const request = new XMLHttpRequest();
-            request.open('post', '/post/new', true);
-            request.setRequestHeader('Content-type', 'application/x-www-form-urlencoded');
-            request.send(`description=` + content);
+            fetch('/post/new', {
+                method: 'post',
+                headers: {
+                    'Content-Type': 'application/x-www-form-urlencoded'
+                },
+                body: new URLSearchParams({
+                    'description': content
+                })
+            })
+                .then(res => {
+                    window.location.reload();
+                })
 
-            if (request.readyState == XMLHttpRequest.DONE && request.status == 200 ) {
-                console.log("")
-                myModal.hide();
-            }
+            contentArea.innerText="";
+            myModal.hide();
         }
 
-    });
+
+    }
+
+
+
 </script>
 
