시큐리티로 전환 전 커밋

--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -11,6 +11,7 @@
                 <form th:action="@{/logout}" method="post">
                     <button><i class="fas fa-sign-out-alt"></i></button>
                 </form>
+                <a th:href="@{/member/profile}"><i class="fas fa-user"></i></a>
             </div>
         </div>
 
