--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -37,14 +37,22 @@
         </div>
 
         <div class="card mt-2" th:unless ="${posts.size()==0}" th:each="post : ${posts}" style="width: 30rem;">
-            <input type="hidden" id="postId" name="postId" th:value="${post.id}">
-            <div class="card-header " th:text="${post.member.nickName}">
-                Featured
+            <input type="hidden" name="postId" th:value="${post.id}">
+            <div class="card-header d-flex justify-content-between ">
+                <span th:text="${post.member.nickName}"></span>
+                <div>
+                    <i class="fas fa-edit"></i>
+                    <i class="fas fa-trash-alt"></i>
+                </div>
+
             </div>
-            <img src="..." class="card-img-top" style="width: 100%; height: 470px; border: solid black 1px;" alt="...">
-            <div class="card-body">
-                <span><i class="far fa-heart"></i> <i class="far fa-thumbs-down"></i></span>
-                <h5 class="card-title">좋아요</h5>
+<!--            <img src="..." class="card-img-top" style="width: 100%; height: 470px;" alt="...">-->
+            <div class="card-body border-top">
+                <div>
+                    <span><i class="far fa-heart" th:onclick="|javascript:sendNewLikesRequest('${post.id}')|"></i>
+                        <i class="far fa-thumbs-down"></i></span>
+                </div>
+                <span class="card-text" th:text="|좋아요 ${#lists.size(post.likesList)}|"></span>
                 <p class="card-text" th:text="${post.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <form action="#">
                     <input type="text"/>
@@ -52,6 +60,7 @@
                 </form>
             </div>
         </div>
+
     </div>
 </body>
 </html>
@@ -62,13 +71,13 @@
     var myModal = new bootstrap.Modal(document.getElementById('exampleModal'));
     var postSubmitBtn = document.getElementById('postSubmitBtn');
     postSubmitBtn.addEventListener('click', function (event) {
-        sendRequest();
+        sendNewPostRequest();
     });
 
-    function sendRequest() {
+    function sendNewPostRequest() {
+        <!-- 모달에 있는 내용 -->
         var contentArea = document.getElementById('message-text');
         var content = contentArea.value;
-
         if (content.length === 0) {
             alert("내용을 입력해 주세요.");
         } else {
@@ -87,8 +96,25 @@
 
             contentArea.innerText="";
             myModal.hide();
+            alert("등록됐습니다.");
         }
+    }
 
+    function sendNewLikesRequest(postId) {
+
+        fetch('/likes/new', {
+            method: 'post',
+            headers: {
+                'Content-Type': 'application/x-www-form-urlencoded'
+            },
+            body: new URLSearchParams({
+                'postId': postId
+            })
+        })
+            .then(res => {
+                window.location.reload();
+                alert("등록됐습니다.");
+            })
 
     }
 
