--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <title>가지가지한다 :로그인</title>
+    <title>로그인 - 가지가지한다</title>
 
     <link th:href="@{/css/bootstrap.css}" href="../static/css/bootstrap.css" rel="stylesheet">
     <script type="text/javascript" th:src="@{/js/bootstrap.bundle.js}" href="../static/js/bootstrap.bundle.js"></script>
