--- a/src/main/resources/templates/member/editForm.html
+++ b/src/main/resources/templates/member/editForm.html
@@ -2,34 +2,16 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>회원가입 - 가지가지한다</title>
+    <title>프로필 수정 - 가지가지한다</title>
 
     <link th:href="@{/css/bootstrap.css}" href="../css/bootstrap.css" rel="stylesheet">
     <script type="text/javascript" th:src="@{/js/bootstrap.bundle.js}"></script>
+    <script src="https://kit.fontawesome.com/c2e67fd6d1.js" crossorigin="anonymous"></script>
 
     <style>
-
         html,
         body {
             height: 100%;
-        }
-
-        body {
-
-            padding-top: 40px;
-            padding-bottom: 40px;
-            background-color: #f5f5f5;
-        }
-
-        .form-signin {
-            width: 100%;
-            max-width: 330px;
-            padding: 15px;
-            margin: auto;
-        }
-
-        .form-signin .checkbox {
-            font-weight: 400;
         }
 
         .field-error {
@@ -47,26 +29,20 @@
             background-color:  #7952b3;
             color: white;
         }
+        .navbar .container{
+            max-width: 600px;
+        }
 
     </style>
 </head>
 <body>
-
-<main class="form-signin">
-    <form th:action th:object="${member}" method="post">
+<div th:replace ="~{fragment/header :: header}"></div>
+<main class="form-signin d-flex justify-content-center mt-5">
+    <form th:action th:object="${profile}" method="post" style="width: 25rem;">
         <div style="height: 124px; width: 100%">
-            <h1 class="h3 mb-3 fw-normal text-center"  th:text="#{logo}">가지가지한다</h1>
+            <h1 class="h3 mb-3 fw-normal text-center">프로필 수정</h1>
         </div>
-
         <div class="mb-4">
-            <div>
-                <label for="email"  th:text="#{member.email}">이메일</label>
-                <input type="text" th:field="*{email}" class="form-control form-control-lg" id="email">
-                <div class="field-error" th:errors="*{email}">
-                    이메일 오류
-                </div>
-            </div>
-
             <div>
                 <label for="name" th:text="#{member.name}">성명</label>
                 <input type="text" th:field="*{name}" class="form-control form-control-lg" id="name">
@@ -83,17 +59,21 @@
                 </div>
             </div>
 
-            <div>
+
+            <div class="mt-3">
                 <label for="password" th:text="#{member.password}">비밀번호</label>
                 <input type="password" th:field="*{password}" class="form-control form-control-lg" id="password">
                 <div class="field-error" th:errors="*{password}">
-                    비밀번호 오류
+                    사용자 이름 오류
+                </div>
+                <div th:if="${#fields.hasGlobalErrors()}">
+                    <p class="field-error" th:each="err : ${#fields.globalErrors()}"
+                       th:text="${err}">글로벌 오류 메시지</p>
                 </div>
             </div>
         </div>
-            <button class="w-100 btn btn-lg" type="submit" th:text="#{member.signup.btn}">가입하기</button>
+        <button class="w-100 btn btn-lg" type="submit" >수정</button>
     </form>
 </main>
-
 </body>
 </html>
