--- a/src/main/resources/templates/fragment/writingModal.html
+++ b/src/main/resources/templates/fragment/writingModal.html
@@ -11,6 +11,7 @@
             </div>
             <div class="modal-body">
                 <form th:action="@{/post/new}" th:object="${post}" method="post">
+                    <input type="hidden" name="postId" th:value="${post.id}">
                     <div class="mb-3">
                         <label for="message-text" class="col-form-label" th:text="#{post.post.content}">내용</label>
                         <textarea th:field="*{description}" rows="6" cols="60"
