--- a/src/main/resources/templates/fragment/header.html
+++ b/src/main/resources/templates/fragment/header.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="header">
         <div class="container">
@@ -8,9 +9,10 @@
             </div>
             <div class="d-flex justify-content-end align-items-center">
                 <button data-bs-toggle="modal" data-bs-target="#exampleModal" ><i class="fas fa-pen-nib"></i></button>
-                <form th:action="@{/logout}" method="post">
-                    <button><i class="fas fa-sign-out-alt"></i></button>
-                </form>
+                <a th:href="@{/logout}" sec:authorize="isAuthenticated()">
+                    <i class="fas fa-sign-out-alt"></i>
+                </a>
+
                 <a th:href="@{/member/profile}"><i class="fas fa-user"></i></a>
             </div>
         </div>
