--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,14 +32,14 @@
 
     <div class="container">
         <!-- 본문 카드 -->
-        <div th:if="${posts.size()==0}">
+        <div th:if="${cards.size()==0}">
             텅...
         </div>
 
-        <div class="card mt-2" th:unless ="${posts.size()==0}" th:each="post : ${posts}" style="width: 30rem;">
+        <div class="card mt-2" th:unless ="${cards.size()==0}" th:each="card : ${cards}" style="width: 30rem;">
             <input type="hidden" name="postId" th:value="${post.id}">
             <div class="card-header d-flex justify-content-between ">
-                <span th:text="${post.member.nickName}"></span>
+                <span th:text="${card.nickName}"></span>
                 <div>
                     <i class="fas fa-edit"></i>
                     <i class="fas fa-trash-alt"></i>
@@ -49,11 +49,11 @@
 <!--            <img src="..." class="card-img-top" style="width: 100%; height: 470px;" alt="...">-->
             <div class="card-body border-top">
                 <div>
-                    <span><i class="far fa-heart" th:onclick="|javascript:sendNewLikesRequest('${post.id}')|"></i>
+                    <span><i class="far fa-heart" th:onclick="|javascript:sendNewLikesRequest('${card.postId}')|"></i>
                         <i class="far fa-thumbs-down"></i></span>
                 </div>
-                <span class="card-text" th:text="|좋아요 ${#lists.size(post.likesList)}|"></span>
-                <p class="card-text" th:text="${post.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <span class="card-text" th:text="|좋아요 ${card.likesCnt}|"></span>
+                <p class="card-text" th:text="${card.description}">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                 <form action="#">
                     <input type="text"/>
                     <button>댓글</button>
